# lectito

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/cli/: Cargo.toml
crates/cli/src/: echo.rs  fetch.rs  fixtures.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: cleanup.rs  config.rs  diagnostics.rs  dom.rs  error.rs  extract.rs  json_schema.rs  lib.rs  markdown.rs  metadata.rs  normalize.rs  patterns.rs  readable.rs  recovery.rs  scoring.rs  serialize.rs
crates/core/src/markdown/: code.rs  footnotes.rs  frontmatter.rs  math.rs  media.rs  tables.rs
crates/fixtures/: Cargo.toml
crates/fixtures/samples/test-pages/codeblocks--chatgpt-codemirror/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/codeblocks--mintlify/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/inline-semantic-elements/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/metadata-header-cleanup/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/trailing-page-chrome/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/trailing-page-chrome-footnotes/: expected-metadata.json  expected.html  source.html
crates/fixtures/src/: lib.rs
doc/: examples.txt
docs/: book.toml  examples.txt
