[package]
name = "lectito-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "readability"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lectito-core = { path = "../core" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde_json = "1.0"
