[package]
name = "lectito-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kuchiki = "0.8"
once_cell = "1.19"
regex = "1.10"
scraper = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
url = "2.5"

[dev-dependencies]
lectito-fixtures = { path = "../fixtures" }
serde_json = "1.0"
